# Judson

./: .env  Cargo.toml  files.txt  judson.service  readme.md  run.sh
PROJECTS/COOL PROJECTS/: twitter.py
migrations/2023-05-29-140527_zipper/: down.sql  up.sql
migrations/2023-05-30-101330_zipper/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/DirectScan/: directscan.rs
src/Zipper/: zipper.rs
